Changed media queries by 15px to resolve the issue of overflow in Firefox. Added box-sizing to inputs so that their widths are consistent.

--- a/_/css/base.css
+++ b/_/css/base.css
@@ -238,6 +238,13 @@ input[type="text"], input[type="password"], input[type="email"], input[type="use
 	background: #fff;
 }
 
+input, textarea {
+	box-sizing: border-box;
+	-webkit-box-sizing:border-box;
+	-moz-box-sizing: border-box;
+	-ms-box-sizing: border-box;
+}
+
 select { padding: 0; }
 
 input[type="text"]:focus, input[type="password"]:focus, input[type="email"]:focus, input[type="username"]:focus, textarea:focus {
