--- a/_/css/layout.css
+++ b/_/css/layout.css
@@ -24,20 +24,23 @@
 /* #Media Queries
 ================================================== */
 	
-	/* Mobile Landscape Size to Tablet Portrait (devices and browsers) */
-	@media only screen and (min-width: 480px) and (max-width: 767px) {}
+/* Mobile Landscape Size to Tablet Portrait (devices and browsers) */
+@media only screen and (min-width: 480px) and (max-width: 782px) {}
 
-	/* All Mobile Sizes (devices and browser) */
-	@media only screen and (max-width: 767px) {}
-	
-	/* Smaller than standard 960 (devices and browsers) */
-	@media only screen and (max-width: 959px) {}
-	
-	/* Tablet Portrait size to standard 960 (devices and browsers) */
-	@media only screen and (min-width: 768px) and (max-width: 959px) {}
-	
-	/* Standard 960 and up (devices and browsers) */
-	@media only screen and (min-width: 960px) {}
+/* All Mobile Sizes (devices and browser) */
+@media only screen and (max-width: 783px) {}
+
+/* Smaller than standard 960 (devices and browsers) */
+@media only screen and (max-width: 975px) {}
+
+/* Tablet Portrait size to standard 960 (devices and browsers) */
+@media only screen and (min-width: 783px) and (max-width: 975px) {}
+
+/* Tablet and to Desktop */
+@media only screen and (min-width: 783px) {}
+
+/* Standard 960 and up (devices and browsers) */
+@media only screen and (min-width: 975px) {}
 
 
 /* #Font-Face
